[gd_scene load_steps=3 format=2]

[ext_resource path="res://LoginScript.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]
LineEdit/colors/LineEdit2 = Color( 0.54902, 0.101961, 0.101961, 1 )
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.94, 0.94, 0.94, 1 )
LineEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = null
LineEdit/styles/normal = null
LineEdit/styles/read_only = null

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="lbl_Password" type="Label" parent="CanvasLayer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 175.0
margin_bottom = 114.0
text = "Contrase√±a:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txt_Username" type="LineEdit" parent="CanvasLayer"]
margin_left = 200.0
margin_top = 44.0
margin_right = 439.0
margin_bottom = 68.0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="CanvasLayer"]

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 230.0
margin_top = 180.0
margin_right = 403.0
margin_bottom = 200.0
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txt_password" type="LineEdit" parent="CanvasLayer"]
margin_left = 200.0
margin_top = 94.0
margin_right = 441.0
margin_bottom = 118.0
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_NombreUsuario" type="Label" parent="CanvasLayer"]
margin_left = 100.0
margin_top = 50.0
margin_right = 229.0
margin_bottom = 64.0
text = "Email:"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="request_completed" from="CanvasLayer/HTTPRequest" to="CanvasLayer" method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer" method="_on_Button_pressed"]
